Radio: station radio fixes, add update playing config option